@@ -860,7 +860,10 @@ static const char help_text[] = MSGTR_Help;
 #define MSGTR_GUI_FilterFontBitmap "Bitmap-Schriften (*.desc)"
 #define MSGTR_GUI_FilterFontTTF "TrueType-Schriften (*.ttf)"
 #define MSGTR_GUI_FilterFontType1 "Typ-1-Schriften (*.pfb)"
+#define MSGTR_GUI_FilterImageCD "CD-Abbild-Cuesheet"
 #define MSGTR_GUI_FilterImageCue "CD-/VCD-/SVCD-Abbild-Cuesheet"
+#define MSGTR_GUI_FilterImageDVD "DVD-Abbild/-Kopie"
+#define MSGTR_GUI_FilterImageVCD "VCD-/SVCD-Abbild-Cuesheet"
 #define MSGTR_GUI_FilterMediumMatroska "Matroska-Medien"
 #define MSGTR_GUI_FilterMediumOgg "Ogg-Medien"
 #define MSGTR_GUI_FilterMediumQuickTime "QuickTime-Medien"
@@ -889,6 +892,7 @@ static const char help_text[] = MSGTR_Help;
 #define MSGTR_GUI_FrontRight "Vorne rechts"
 #define MSGTR_GUI_HideVideoWindow "Videofenster nach der Wiedergabe ausblenden"
 #define MSGTR_GUI_Hue "Farbton"
+#define MSGTR_GUI_Image "Abbild"
 #define MSGTR_GUI_Information "Information"
 #define MSGTR_GUI_Lavc "lavc (MPEG-1-Encodierung in Echtzeit)"
 #define MSGTR_GUI_MaximumUsageSpareCPU "Maximale Nutzung freier CPU-Zeit"
@@ -994,6 +998,7 @@ static const char help_text[] = MSGTR_Help;
 #define MSGTR_GUI_SelectedFiles "Ausgewählte Dateien"
 #define MSGTR_GUI_SelectFile "Datei auswählen"
 #define MSGTR_GUI_SelectFont "Schrift auswählen"
+#define MSGTR_GUI_SelectImage "Abbild auswählen"
 #define MSGTR_GUI_SelectSubtitle "Untertitel auswählen"
 #define MSGTR_GUI_SizeDouble "Doppelte Größe"
 #define MSGTR_GUI_SizeFullscreen "Vollbild"
